--- a/HCI Cooking/HCI Cooking/HCI Cooking.csproj
+++ b/HCI Cooking/HCI Cooking/HCI Cooking.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -63,6 +64,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Recipe.cs" />
     <Compile Include="Switcher.cs" />
     <Compile Include="ISwitchable.cs" />
     <Compile Include="MainWindow.xaml.cs">
