--- a/HCI Cooking/HCI Cooking/HCI Cooking.csproj
+++ b/HCI Cooking/HCI Cooking/HCI Cooking.csproj
@@ -64,6 +64,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Pages\CookingTechniqueLessons.xaml.cs">
+      <DependentUpon>CookingTechniqueLessons.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\RecipeCompleteSteps.xaml.cs">
+      <DependentUpon>RecipeCompleteSteps.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\RecipeIndividualSteps.xaml.cs">
+      <DependentUpon>RecipeIndividualSteps.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Recipe.cs" />
     <Compile Include="Switcher.cs" />
     <Compile Include="ISwitchable.cs" />
@@ -71,9 +80,21 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\CookingTechniqueLessons.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\MainMenu.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\RecipeCompleteSteps.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\RecipeIndividualSteps.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\RecipeOverview.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -119,6 +140,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\nichi.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Rice Bowl.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
