--- a/HCI Cooking/HCI Cooking/HCI Cooking.csproj
+++ b/HCI Cooking/HCI Cooking/HCI Cooking.csproj
@@ -64,6 +64,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Pages\AchievementMenu.xaml.cs">
+      <DependentUpon>AchievementMenu.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\CookingLessonWhisking.xaml.cs">
       <DependentUpon>CookingLessonWhisking.xaml</DependentUpon>
     </Compile>
@@ -83,6 +86,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\AchievementMenu.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Pages\CookingLessonWhisking.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
