--- a/HCI Cooking/HCI Cooking/HCI Cooking.csproj
+++ b/HCI Cooking/HCI Cooking/HCI Cooking.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Database.cs" />
     <Compile Include="Pages\AchievementMenu.xaml.cs">
       <DependentUpon>AchievementMenu.xaml</DependentUpon>
     </Compile>
