--- a/HCI Cooking/HCI Cooking/HCI Cooking.csproj
+++ b/HCI Cooking/HCI Cooking/HCI Cooking.csproj
@@ -257,6 +257,9 @@
     <Resource Include="Images\green_check.png" />
     <Resource Include="Images\red_cross.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\ace cooking title.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
