EVERYTHING PETER WANTED ME TO SYNC
C: err there's tons of crazy stuff done here.

--- a/HCI Cooking/HCI Cooking/HCI Cooking.csproj
+++ b/HCI Cooking/HCI Cooking/HCI Cooking.csproj
@@ -260,6 +260,12 @@
   <ItemGroup>
     <None Include="Images\ace cooking title.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\achivements\first-recipe.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\benny.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
