Cleaned Solution and skills images load
skills check marks or crosses load. There's a black background on them.
Might add a white background on them so it doesn't look so bad

--- a/HCI Cooking/HCI Cooking/HCI Cooking.csproj
+++ b/HCI Cooking/HCI Cooking/HCI Cooking.csproj
@@ -274,6 +274,12 @@
   <ItemGroup>
     <None Include="Images\benny.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\arrow_right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\achivements\waffle_badge_wbg.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
