Fine-tuning and placeholder images

--- a/HCI Cooking/HCI Cooking/HCI Cooking.csproj
+++ b/HCI Cooking/HCI Cooking/HCI Cooking.csproj
@@ -283,6 +283,18 @@
   <ItemGroup>
     <None Include="Images\fixed_title.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\ace_icon64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\ace_icon128.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\placeholder_2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\video_placeholder.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
